# rrt-gravity-exploration

./: .gitignore  README.md  pyproject.toml  run.sh  runner.sh
data/: backup_data.sh
src/: explore.py  explore_collisions.py  graph_explore_results.py  graph_failed_results.py  graph_manual_results.py  graph_metadata.py  graph_nn_accuracy.py  graph_results.py  graph_scatter_2d.py  graph_simdist.py  graph_tau_norms.py  graph_travel_metrics.py  grav_explore_trainer.py  grav_explorer.py  grav_point_cleaner.py  grav_tester.py  grav_trainer.py  print_metadata.py  random_explore.py  rrt_explore.py  runner.sh  shared.py  test.py  test_nn_manual.py  tsp.py
src/models/: one-dof.xml  panda-2dof.xml  panda-3dof.xml  panda-4dof.xml  panda-5dof.xml  panda-6dof.xml  panda-7dof.xml
