[tool.poetry]
name = "arm-simulation"
version = "0.1.0"
description = "Robotic arm manipulation with Mujoco Physics Engine"
authors = ["Benton Clark"]

[tool.poetry.dependencies]
python = "^3.6"
gym = "^0.15.4"
mujoco-py = "^2.0.2"
pylint = "^2.4.4"
torch = "^1.3.1"
matplotlib = "^3.1.2"
tensorflow-gpu = "1.14"
mlrose = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
