[tool.poetry]
name = "arm-simulation"
version = "0.1.0"
description = "Robotic arm manipulation with Mujoco Physics Engine"
authors = ["Benton Clark"]

[tool.poetry.dependencies]
python = "^3.8"
mujoco-py = "^2.0.2"
pylint = "^2.4.4"
torch = "^1.5.1"
matplotlib = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
